fix: cleanup and refactor
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>